# CppOtl

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
doc/en/: Access.md  Characteristics.md  Construction.md  Synopsis.md  Traits.md  UML_Relations.md
include/otn/: access.hpp  all.hpp  conform.hpp  cpp_lang.hpp  default.hpp  raw.hpp  safe.hpp  slim.hpp  std_smart.hpp  utility.hpp
include/otn/interaction/: safe_raw.hpp  safe_slim.hpp  slim_raw.hpp
include/otn/v1/access/: functions.hpp
include/otn/v1/access/detail/: access.hpp  assembly.hpp  gain.hpp
include/otn/v1/base/: configs.hpp  factory.hpp  rules.hpp  summaries.hpp  traits.hpp
include/otn/v1/base/detail/: assembly.hpp  comparison.hpp  concepts.hpp  hash.hpp  pointer_traits.hpp  referrer.hpp  token.hpp  traits.hpp
include/otn/v1/basis/: names.hpp  traits.hpp
include/otn/v1/collection/detail/: iterator.hpp
include/otn/v1/config/: deprecations.hpp
include/otn/v1/conform/: token.hpp
include/otn/v1/conversion/: operations.hpp  properties.hpp  rules.hpp
include/otn/v1/cpp_lang/: basis.hpp  clear_optional.hpp  origin.hpp  referrer.hpp  thin_optional.hpp  thin_single.hpp  unified_optional.hpp  unified_unknown.hpp
include/otn/v1/cpp_lang/detail/: assembly.hpp  comparison.hpp  concrete.hpp  conversion.hpp  generic.hpp  hash.hpp  pointer_traits.hpp  range_access.hpp  referrer.hpp  swap.hpp  traits.hpp
include/otn/v1/cpp_lang/internal/: storage_optional.hpp  storage_single.hpp
include/otn/v1/default/: import.hpp
include/otn/v1/deleter/: names.hpp  traits.hpp
include/otn/v1/element/: summaries.hpp  traits.hpp
include/otn/v1/generic/: bind.hpp  token.hpp
include/otn/v1/interaction/: base_cpp_lang.hpp  base_std_smart.hpp  raw_cpp_lang.hpp  raw_std_smart.hpp  safe_cpp_lang.hpp  safe_raw.hpp  safe_slim.hpp  safe_std_smart.hpp  slim_cpp_lang.hpp  slim_raw.hpp  slim_std_smart.hpp  std_smart_cpp_lang.hpp
include/otn/v1/interaction/base_cpp_lang/detail/: comparison.hpp
include/otn/v1/interaction/base_std_smart/detail/: comparison.hpp
include/otn/v1/interaction/raw_cpp_lang/detail/: conversion.hpp  referrer.hpp
include/otn/v1/interaction/raw_std_smart/detail/: conversion.hpp
include/otn/v1/interaction/safe_cpp_lang/detail/: conversion.hpp
include/otn/v1/interaction/safe_raw/detail/: conversion.hpp
include/otn/v1/interaction/safe_slim/detail/: conversion.hpp
include/otn/v1/interaction/safe_std_smart/detail/: conversion.hpp  referrer.hpp
include/otn/v1/interaction/slim_cpp_lang/detail/: conversion.hpp
include/otn/v1/interaction/slim_raw/detail/: conversion.hpp
include/otn/v1/interaction/slim_std_smart/detail/: conversion.hpp  generic.hpp  referrer.hpp
include/otn/v1/interaction/std_smart_cpp_lang/: referrer.hpp
include/otn/v1/interaction/std_smart_cpp_lang/detail/: base.hpp  comparison.hpp  conversion.hpp  referrer.hpp
include/otn/v1/layout/: names.hpp  traits.hpp
include/otn/v1/lifetime/: detector.hpp  names.hpp  rules.hpp  traits.hpp
include/otn/v1/multiplicity/: names.hpp  traits.hpp
include/otn/v1/owner_base/: names.hpp  rules.hpp  traits.hpp
include/otn/v1/ownership/: names.hpp  traits.hpp
include/otn/v1/proxy/: factory.hpp
include/otn/v1/proxy/detail/: assembly.hpp  iterator.hpp  list.hpp  list_iterator.hpp  range_access.hpp  tuple_access.hpp
include/otn/v1/raw/: basis.hpp  spec.hpp
include/otn/v1/raw/detail/: assembly.hpp  base.hpp  concrete.hpp  conversion.hpp  factory.hpp  generic.hpp  hash.hpp  pointer_traits.hpp  range_access.hpp  swap.hpp  token.hpp
include/otn/v1/referrer/: adaptor.hpp  adaptor_traits.hpp  factory.hpp  rules.hpp  summaries.hpp  tags.hpp  traits.hpp
include/otn/v1/safe/: basis.hpp  spec.hpp
include/otn/v1/safe/detail/: assembly.hpp  base.hpp  concrete.hpp  conform.hpp  conversion.hpp  factory.hpp  generic.hpp  hash.hpp  pointer_traits.hpp  proxy.hpp  range_access.hpp  referrer.hpp  swap.hpp  token.hpp
include/otn/v1/slim/: basis.hpp  spec.hpp
include/otn/v1/slim/detail/: assembly.hpp  base.hpp  concrete.hpp  conversion.hpp  factory.hpp  generic.hpp  hash.hpp  pointer_traits.hpp  range_access.hpp  swap.hpp  token.hpp
include/otn/v1/spec/: brief.hpp  editor.hpp  traits.hpp
include/otn/v1/spec/detail/: assembly.hpp  editor.hpp
include/otn/v1/std_smart/: basis.hpp  origin.hpp
include/otn/v1/std_smart/detail/: assembly.hpp  concrete.hpp  conversion.hpp  generic.hpp  owner_base.hpp  pointer_traits.hpp  proxy.hpp  referrer.hpp  traits.hpp
include/otn/v1/support/: assert.hpp  concept.hpp  noexcept.hpp  pointer_traits.hpp  to_value.hpp  type_traits.hpp  utilize.hpp
include/otn/v1/tag/: itself.hpp
include/otn/v1/traits/: derivative.hpp
include/otn/v1/utility/: object_factory.hpp  unique_carrier.hpp
